[package]
name = "rfetch"
version = "0.1.0"
edition = "2021"
#authors = "Raul Perdomo <raul@perdomo.org>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
colored = "1.7.0"
whoami = "1.3.0"
nix = "0.26.0"
humantime = "2.1.0"
